--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,13 +1,23 @@
 <html>
+
+  <!-- allows flash messages to work -->
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="flash-messages">
+      {% for message in messages %}
+      <p>{{ message }}</p>
+      {% endfor %}
+    </div>
+    {% endif %}
+  {% endwith %}
+
   <body>
     <h1>LOGIN</h1>
-      <form action='login' method='GET'><br>
-        <h4>{{ invalid_message }}</h4>    
-        Username/Email: <input type='text' name='user_or_email'/> <br>
-        Password: <input type='text' name='password'/> <br>
-        
-            <h3>Email: <input type='text' name='email'/></h3> <br>
-            <input type='submit' value='Go'/>
-      </form>
+    <form action="{{ url_for('login') }}" method="POST"><br>
+      <h4>{{ invalid_message }}</h4>    
+      Username or Email: <input type="text" name="user_or_email" required/> <br>
+      Password: <input type="password" name="password" required/> <br>
+      <button type="submit">Login</button>
+    </form>
   </body>
 </html>
