--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -1,3 +1,4 @@
+
 <html>
   <body>
     <!-- allows flash messages to work -->
@@ -12,13 +13,53 @@
     {% endwith %}
     
     {% if user %}
-      <h1>{{ user.username }}'s homepage</h1>
-      Hello, World!
+      <!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
+}
+</style>
+</head>
+<body>
+
+<h2>Talbook</h2>
+
+
+<ul>
+  <li><a href="/home">Home</a></li>
+  <li><a href="/search">Search</a></li>
+  <li><a href="/inbox">Inbox</a></li>
+  <li><a href="/selling">Selling</a></li>
+  <li><a href="/user_profile/{{user.username}}">Profile</a></li>
+</ul>
+
+</body>
+</html>
+
     {% else %}
       <p>You are not logged in.</p>
     {% endif %}
-      <a href="/user_profile/{{user.username}}">
-    <button>Profile</button>
-    </a>
   </body>
 </html>
