--- a/app/templates/item_details.html
+++ b/app/templates/item_details.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <a href="{{ url_for('bazaar') }}" class="back-button">
+            <a href="{{ url_for('home') }}" class="back-button">
                 <i class="fas fa-arrow-left"></i> Back to Bazaar
             </a>
             <h1 class="item-title">{{ values["item_name"] }}</h1>
